# gemini-bot

./: .env.example  Cargo.toml  LICENSE  README.md
src/: colours.rs  main.rs  utils.rs
src/commands/: fun.rs  general.rs  meta.rs  mod.rs  owner.rs
