[package]
name = "gemini-bot"
version = "0.1.1"
authors = ["Amelia Clarke <amelia.amok@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
rand = "0.8"
serenity = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.tokio]
features = ["rt-multi-thread", "signal"]
version = "1"
